tests/ui/const-generics/generic_const_exprs/const-block-is-poly.stderr
warning: the feature `generic_const_exprs` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/const-block-is-poly.rs:1:12
   |
LL | #![feature(generic_const_exprs)]
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: overly complex generic constant
  --> $DIR/const-block-is-poly.rs:5:19
   |
LL |     let _ = [0u8; const { std::mem::size_of::<T>() }];
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ const blocks are not supported in generic constants
   |
   = help: consider moving this anonymous constant into a `const` function
   = note: this operation may be supported in the future

error: aborting due to 1 previous error; 1 warning emitted

